Adding a button to refresh the page more easily

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
     <script src="index.js"></script>
   </body>
-
+  
+ <button onclick="location.reload();">Refresh Page</button>
+  
   <footer>
     www 🎲 Pranav's Projects 🎲 com
   </footer>
