Updated the name of the button for better experience for new users

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="index.js"></script>
   </body>
   
- <button onclick="location.reload();">Refresh Page</button>
+ <button onclick="location.reload();">Roll Again</button>
   
   <footer>
     www 🎲 Pranav's Projects 🎲 com
